tests/integration/telemetry/tracing/otelcollector/testdata/otel-tracing-formatter.yaml
apiVersion: telemetry.istio.io/v1
kind: Telemetry
metadata:
  name: otel-tracing
spec:
  tracing:
  - providers:
    - name: test-otel
    randomSamplingPercentage: 100.0
    customTags:
      "provider":
        literal:
          value: "otel"
      "key1":
        formatter:
          value: "%REQ(key1)%"
