tests/integration/telemetry/tracing/otelcollector/testdata/otel-tracing-http.yaml
apiVersion: telemetry.istio.io/v1
kind: Telemetry
metadata:
  name: otel-tracing
spec:
  tracing:
    - providers:
        - name: test-otel-http
      randomSamplingPercentage: 100.0
      customTags:
        "provider":
          literal:
            value: "otel-http"
