tests/integration/telemetry/tracing/otelcollector/testdata/otel-tracing-res-detectors.yaml
apiVersion: telemetry.istio.io/v1
kind: Telemetry
metadata:
  name: otel-tracing
spec:
  tracing:
    - providers:
        - name: test-otel-res-detectors
      randomSamplingPercentage: 100.0
      customTags:
        "provider":
          literal:
            value: "otel-grpc-with-res-detectors"
