tests/integration/telemetry/tracing/otelcollector/testdata/test-otel-grpc-with-initial-metadata.yaml
apiVersion: telemetry.istio.io/v1
kind: Telemetry
metadata:
  name: otel-tracing
spec:
  tracing:
    - providers:
        - name: test-otel-grpc-with-initial-metadata
      randomSamplingPercentage: 100.0
      customTags:
        "provider":
          literal:
            value: "test-otel-grpc-with-initial-metadata"
